# kitti_dataset_dev

./: README.md
catkin_ws_kitti/: .cproject  .project
catkin_ws_kitti/src/kitti_player-master/: CMakeLists.txt  README-CN.md
catkin_ws_kitti/src/kitti_player-master/cfg/: rviz_kitti_player.rviz
catkin_ws_kitti/src/kitti_player-master/launch/: kittiplayer_standalone.launch  my_kittiplayer_standalone.launch
catkin_ws_kitti/src/kitti_player-master/src/: kitti_player.cpp  my_kitti_player.cpp
catkin_ws_kitti/src/kitti_tracking_player/: CMakeLists.txt  README.md  package.xml
catkin_ws_kitti/src/kitti_tracking_player/launch/: kitti_tracking_player.launch
catkin_ws_kitti/src/kitti_tracking_player/src/: KittiConfig.cpp  KittiConfig.h  KittiDataset.cpp  KittiDataset.h  fusion_type.h  kitti_tracking_player.cpp  kitti_utils.cpp  kitti_utils.h
evaluation/detection/: README-CN.md  README_cn.md
evaluation/detection/devit_object/matlab/: run_demo.m  run_statistics.m
evaluation/detection/kitti_eval-master/: evaluate_object_3d_offline.cpp
evaluation/tracking/devkit/matlab/: run_demo.m
evaluation/tracking/devkit/python/: README.md
kitti_object_vis-master/: README-CN.md
pykitti-master/: README-CN.md  README-zhanghm.md
pykitti-master/demos/: demo_raw.py  demo_raw_cv2.py
